# Native-sdd

./: .gitattributes  .gitignore  LICENSE  README.md  index.html
.github/workflows/: pages.yml
docs/: HARNESS-CONTRACT.md  USO.md  VISAO.md  index.html  privacidade.html
methodology/: README.md
methodology/01-onboarding/: README.md
methodology/02-execution/: README.md
methodology/03-standards/: README.md
onboarding/: PSScriptAnalyzerSettings.psd1  README.md  bootstrap-lib.ps1  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  new-project.ps1
onboarding/claudex/: claudex-lib.ps1  claudex.ps1  profiles.psd1
onboarding/cliproxy/: cliproxy.psd1
onboarding/herdr/: config.toml  herdr.psd1
onboarding/linux/: apply.sh  install-clis.sh
onboarding/local-ai/: .gitignore  README.md  bench.py  install-local-ai.sh  (+2 more)
onboarding/semantic-kb/: .gitignore  README.md  install-semantic-kb.sh  pyproject.toml  server.py  test_server.py
templates/: README.md
tools/: adapt.ps1  agent-lint.ps1  bump-herdr.ps1  check.ps1  command-lint.ps1  command-table-lint.ps1  complementary-repos.ps1  config-lint.ps1  doc-lint.ps1  doctor.ps1  doubt-lint.ps1  e2e-linux.ps1  encoding-lint.ps1  graph-export.ps1  hooks-lint.ps1  init.ps1  iterate.ps1  kb-lint.ps1  learn.ps1  max.ps1  orchestrate.ps1  peers.ps1  pii-lint.ps1  project-check.ps1  publish.ps1  reflect.ps1  release-lint.ps1  resync-lint.ps1  resync.ps1  rules-budget.ps1  simulate.ps1  skill-gap.ps1  standards-lint.ps1  status.ps1  supplements.ps1  supplements.psd1  sync-context.ps1  telemetry.ps1  update-skills.ps1
(+149 files in other folders)
